tests/errors/e_assnone.pyx
cdef void spam():
	None = 42
_ERRORS = u"""
2:1: Cannot assign to or delete this
"""
